<resources>
    <string name="app_name">bluetooth_device</string>
    <string name="exit_from_app">Exit from App</string>
    <string name="tap_to_connect">Tap to connect</string>
    <string name="hear_beat">Hear beat</string>
    <string name="heart_beat">Heart Beat</string>
    <string name="_0">0</string>
    <string name="bpm">Bpm</string>
    <string name="spo2">SpO2</string>
    <string name="percentage_symbol">%</string>
    <string name="temperature">Temperature</string>
    <string name="degree_celsius">°C</string>
    <string name="title_activity_covid_result">CovidResultActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>